POWR-296 add modular scale to typography.scss

--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -11,6 +11,59 @@ Description: Bootstrap 4 with Sass
 /* Font Awesome Icons */
 @import url("//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
 /* Bring in Bootstrap mixins for breakpoints */
+html {
+  font-size: 14px; }
+  @media (min-width: 768px) {
+    html {
+      font-size: 16px; } }
+  @media (min-width: 992px) {
+    html {
+      font-size: 18px; } }
+
+h1, .h1 {
+  font-size: 1.80203rem; }
+
+h2, .h2 {
+  font-size: 1.60181rem; }
+
+h3, .h3 {
+  font-size: 1.42383rem; }
+
+h4, .h4 {
+  font-size: 1.26562rem; }
+
+h5, .h5 {
+  font-size: 1.125rem; }
+
+h6, .h6 {
+  font-size: 1rem; }
+
+.display-4 {
+  font-size: 2.80203rem; }
+
+.display-3 {
+  font-size: 3.15229rem; }
+
+.display-2 {
+  font-size: 3.54632rem; }
+
+.display-1 {
+  font-size: 3.98961rem; }
+
+@media (min-width: 768px) {
+  h1, .h1 {
+    font-size: 2.48832rem; }
+  h2, .h2 {
+    font-size: 2.0736rem; }
+  h3, .h3 {
+    font-size: 1.728rem; }
+  h4, .h4 {
+    font-size: 1.44rem; }
+  h5, .h5 {
+    font-size: 1.2rem; }
+  h6, .h6 {
+    font-size: 1rem; } }
+
 /*!
  * Bootstrap v4.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2018 The Bootstrap Authors
@@ -69,7 +122,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 body {
   margin: 0;
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 1.125rem;
+  font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
@@ -319,25 +372,25 @@ h1, h2, h3, h4, h5, h6,
   color: inherit; }
 
 h1, .h1 {
-  font-size: 2.8125rem; }
+  font-size: 2.5rem; }
 
 h2, .h2 {
-  font-size: 2.25rem; }
+  font-size: 2rem; }
 
 h3, .h3 {
-  font-size: 1.96875rem; }
+  font-size: 1.75rem; }
 
 h4, .h4 {
-  font-size: 1.6875rem; }
+  font-size: 1.5rem; }
 
 h5, .h5 {
-  font-size: 1.40625rem; }
+  font-size: 1.25rem; }
 
 h6, .h6 {
-  font-size: 1.125rem; }
+  font-size: 1rem; }
 
 .lead {
-  font-size: 1.40625rem;
+  font-size: 1.25rem;
   font-weight: 300; }
 
 .display-1 {
@@ -395,7 +448,7 @@ mark,
 
 .blockquote {
   margin-bottom: 1rem;
-  font-size: 1.40625rem; }
+  font-size: 1.25rem; }
 
 .blockquote-footer {
   display: block;
@@ -1263,9 +1316,9 @@ pre {
 .form-control {
   display: block;
   width: 100%;
-  height: calc(2.4375rem + 2px);
+  height: calc(2.25rem + 2px);
   padding: 0.375rem 0.75rem;
-  font-size: 1.125rem;
+  font-size: 1rem;
   line-height: 1.5;
   color: #495057;
   background-color: #fff;
@@ -1311,13 +1364,13 @@ select.form-control:focus::-ms-value {
 .col-form-label-lg {
   padding-top: calc(0.5rem + 1px);
   padding-bottom: calc(0.5rem + 1px);
-  font-size: 1.40625rem;
+  font-size: 1.25rem;
   line-height: 1.5; }
 
 .col-form-label-sm {
   padding-top: calc(0.25rem + 1px);
   padding-bottom: calc(0.25rem + 1px);
-  font-size: 0.98438rem;
+  font-size: 0.875rem;
   line-height: 1.5; }
 
 .form-control-plaintext {
@@ -1336,16 +1389,16 @@ select.form-control:focus::-ms-value {
     padding-left: 0; }
 
 .form-control-sm {
-  height: calc(1.97656rem + 2px);
+  height: calc(1.8125rem + 2px);
   padding: 0.25rem 0.5rem;
-  font-size: 0.98438rem;
+  font-size: 0.875rem;
   line-height: 1.5;
   border-radius: 0.2rem; }
 
 .form-control-lg {
-  height: calc(3.10938rem + 2px);
+  height: calc(2.875rem + 2px);
   padding: 0.5rem 1rem;
-  font-size: 1.40625rem;
+  font-size: 1.25rem;
   line-height: 1.5;
   border-radius: 0.3rem; }
 
@@ -1413,7 +1466,7 @@ textarea.form-control {
   max-width: 100%;
   padding: 0.25rem 0.5rem;
   margin-top: .1rem;
-  font-size: 0.98438rem;
+  font-size: 0.875rem;
   line-height: 1.5;
   color: #fff;
   background-color: rgba(4, 106, 56, 0.9);
@@ -1495,7 +1548,7 @@ textarea.form-control {
   max-width: 100%;
   padding: 0.25rem 0.5rem;
   margin-top: .1rem;
-  font-size: 0.98438rem;
+  font-size: 0.875rem;
   line-height: 1.5;
   color: #fff;
   background-color: rgba(220, 53, 69, 0.9);
@@ -1615,7 +1668,7 @@ textarea.form-control {
   user-select: none;
   border: 1px solid transparent;
   padding: 0.375rem 0.75rem;
-  font-size: 1.125rem;
+  font-size: 1rem;
   line-height: 1.5;
   border-radius: 0.25rem;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; }
@@ -2023,13 +2076,13 @@ fieldset:disabled a.btn {
 
 .btn-lg, .btn-group-lg > .btn {
   padding: 0.5rem 1rem;
-  font-size: 1.40625rem;
+  font-size: 1.25rem;
   line-height: 1.5;
   border-radius: 0.3rem; }
 
 .btn-sm, .btn-group-sm > .btn {
   padding: 0.25rem 0.5rem;
-  font-size: 0.98438rem;
+  font-size: 0.875rem;
   line-height: 1.5;
   border-radius: 0.2rem; }
 
@@ -2095,7 +2148,7 @@ input[type="button"].btn-block {
   min-width: 10rem;
   padding: 0.5rem 0;
   margin: 0.125rem 0 0;
-  font-size: 1.125rem;
+  font-size: 1rem;
   color: #212529;
   text-align: left;
   list-style: none;
@@ -2229,7 +2282,7 @@ input[type="button"].btn-block {
   display: block;
   padding: 0.5rem 1.5rem;
   margin-bottom: 0;
-  font-size: 0.98438rem;
+  font-size: 0.875rem;
   color: #6c757d;
   white-space: nowrap; }
 
@@ -2412,7 +2465,7 @@ input[type="button"].btn-block {
   align-items: center;
   padding: 0.375rem 0.75rem;
   margin-bottom: 0;
-  font-size: 1.125rem;
+  font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
   color: #495057;
@@ -2430,9 +2483,9 @@ input[type="button"].btn-block {
 .input-group-lg > .input-group-append > .input-group-text,
 .input-group-lg > .input-group-prepend > .btn,
 .input-group-lg > .input-group-append > .btn {
-  height: calc(3.10938rem + 2px);
+  height: calc(2.875rem + 2px);
   padding: 0.5rem 1rem;
-  font-size: 1.40625rem;
+  font-size: 1.25rem;
   line-height: 1.5;
   border-radius: 0.3rem; }
 
@@ -2441,9 +2494,9 @@ input[type="button"].btn-block {
 .input-group-sm > .input-group-append > .input-group-text,
 .input-group-sm > .input-group-prepend > .btn,
 .input-group-sm > .input-group-append > .btn {
-  height: calc(1.97656rem + 2px);
+  height: calc(1.8125rem + 2px);
   padding: 0.25rem 0.5rem;
-  font-size: 0.98438rem;
+  font-size: 0.875rem;
   line-height: 1.5;
   border-radius: 0.2rem; }
 
@@ -2468,7 +2521,7 @@ input[type="button"].btn-block {
 .custom-control {
   position: relative;
   display: block;
-  min-height: 1.6875rem;
+  min-height: 1.5rem;
   padding-left: 1.5rem; }
 
 .custom-control-inline {
@@ -2497,7 +2550,7 @@ input[type="button"].btn-block {
   margin-bottom: 0; }
   .custom-control-label::before {
     position: absolute;
-    top: 0.34375rem;
+    top: 0.25rem;
     left: -1.5rem;
     display: block;
     width: 1rem;
@@ -2508,7 +2561,7 @@ input[type="button"].btn-block {
     background-color: #dee2e6; }
   .custom-control-label::after {
     position: absolute;
-    top: 0.34375rem;
+    top: 0.25rem;
     left: -1.5rem;
     display: block;
     width: 1rem;
@@ -2554,7 +2607,7 @@ input[type="button"].btn-block {
 .custom-select {
   display: inline-block;
   width: 100%;
-  height: calc(2.4375rem + 2px);
+  height: calc(2.25rem + 2px);
   padding: 0.375rem 1.75rem 0.375rem 0.75rem;
   line-height: 1.5;
   color: #495057;
@@ -2582,13 +2635,13 @@ input[type="button"].btn-block {
     opacity: 0; }
 
 .custom-select-sm {
-  height: calc(1.97656rem + 2px);
+  height: calc(1.8125rem + 2px);
   padding-top: 0.375rem;
   padding-bottom: 0.375rem;
   font-size: 75%; }
 
 .custom-select-lg {
-  height: calc(3.10938rem + 2px);
+  height: calc(2.875rem + 2px);
   padding-top: 0.375rem;
   padding-bottom: 0.375rem;
   font-size: 125%; }
@@ -2597,14 +2650,14 @@ input[type="button"].btn-block {
   position: relative;
   display: inline-block;
   width: 100%;
-  height: calc(2.4375rem + 2px);
+  height: calc(2.25rem + 2px);
   margin-bottom: 0; }
 
 .custom-file-input {
   position: relative;
   z-index: 2;
   width: 100%;
-  height: calc(2.4375rem + 2px);
+  height: calc(2.25rem + 2px);
   margin: 0;
   opacity: 0; }
   .custom-file-input:focus ~ .custom-file-label {
@@ -2623,7 +2676,7 @@ input[type="button"].btn-block {
   right: 0;
   left: 0;
   z-index: 1;
-  height: calc(2.4375rem + 2px);
+  height: calc(2.25rem + 2px);
   padding: 0.375rem 0.75rem;
   line-height: 1.5;
   color: #495057;
@@ -2637,7 +2690,7 @@ input[type="button"].btn-block {
     bottom: 0;
     z-index: 3;
     display: block;
-    height: 2.4375rem;
+    height: 2.25rem;
     padding: 0.375rem 0.75rem;
     line-height: 1.5;
     color: #495057;
@@ -2824,10 +2877,10 @@ input[type="button"].btn-block {
 
 .navbar-brand {
   display: inline-block;
-  padding-top: 0.28906rem;
-  padding-bottom: 0.28906rem;
+  padding-top: 0.3125rem;
+  padding-bottom: 0.3125rem;
   margin-right: 1rem;
-  font-size: 1.40625rem;
+  font-size: 1.25rem;
   line-height: inherit;
   white-space: nowrap; }
   .navbar-brand:hover, .navbar-brand:focus {
@@ -2858,7 +2911,7 @@ input[type="button"].btn-block {
 
 .navbar-toggler {
   padding: 0.25rem 0.75rem;
-  font-size: 1.40625rem;
+  font-size: 1.25rem;
   line-height: 1;
   background-color: transparent;
   border: 1px solid transparent;
@@ -3332,7 +3385,7 @@ input[type="button"].btn-block {
 
 .pagination-lg .page-link {
   padding: 0.75rem 1.5rem;
-  font-size: 1.40625rem;
+  font-size: 1.25rem;
   line-height: 1.5; }
 
 .pagination-lg .page-item:first-child .page-link {
@@ -3345,7 +3398,7 @@ input[type="button"].btn-block {
 
 .pagination-sm .page-link {
   padding: 0.25rem 0.5rem;
-  font-size: 0.98438rem;
+  font-size: 0.875rem;
   line-height: 1.5; }
 
 .pagination-sm .page-item:first-child .page-link {
@@ -3470,7 +3523,7 @@ input[type="button"].btn-block {
   font-weight: 700; }
 
 .alert-dismissible {
-  padding-right: 4.1875rem; }
+  padding-right: 4rem; }
   .alert-dismissible .close {
     position: absolute;
     top: 0;
@@ -3560,7 +3613,7 @@ input[type="button"].btn-block {
   display: flex;
   height: 1rem;
   overflow: hidden;
-  font-size: 0.84375rem;
+  font-size: 0.75rem;
   background-color: #e9ecef;
   border-radius: 0.25rem; }
 
@@ -3736,7 +3789,7 @@ input[type="button"].btn-block {
 
 .close {
   float: right;
-  font-size: 1.6875rem;
+  font-size: 1.5rem;
   font-weight: 700;
   line-height: 1;
   color: #000;
@@ -3893,7 +3946,7 @@ button.close {
   word-spacing: normal;
   white-space: normal;
   line-break: auto;
-  font-size: 0.98438rem;
+  font-size: 0.875rem;
   word-wrap: break-word;
   opacity: 0; }
   .tooltip.show {
@@ -3978,7 +4031,7 @@ button.close {
   word-spacing: normal;
   white-space: normal;
   line-break: auto;
-  font-size: 0.98438rem;
+  font-size: 0.875rem;
   word-wrap: break-word;
   background-color: #fff;
   background-clip: padding-box;
@@ -4083,7 +4136,7 @@ button.close {
 .popover-header {
   padding: 0.5rem 0.75rem;
   margin-bottom: 0;
-  font-size: 1.125rem;
+  font-size: 1rem;
   color: inherit;
   background-color: #f7f7f7;
   border-bottom: 1px solid #ebebeb;
@@ -6399,7 +6452,7 @@ a.text-dark:hover, a.text-dark:focus {
  * Styles for Bootstrap Barrio's breadcrumbs.
  */
 .breadcrumb {
-  font-size: 0.929em 0.98438rem; }
+  font-size: 0.929em 0.875rem; }
 
 .region-breadcrumb {
   padding: 0 15px 0.25em;
@@ -6417,7 +6470,7 @@ a.text-dark:hover, a.text-dark:focus {
   margin-bottom: 1em; }
 
 .field-node--comment {
-  font-size: 0.98438rem; }
+  font-size: 0.875rem; }
 
 .comment {
   margin-bottom: 1.25em;
@@ -6430,7 +6483,7 @@ a.text-dark:hover, a.text-dark:focus {
 .comment__meta {
   padding: 0 30px 0 0;
   /* LTR */
-  font-size: 1.125rem; }
+  font-size: 1rem; }
 
 [dir="rtl"] .comment__meta {
   padding: 0 0 0 30px; }
@@ -6453,7 +6506,7 @@ a.text-dark:hover, a.text-dark:focus {
 .comment__permalink {
   margin-bottom: 4px;
   color: #68696b;
-  font-size: 0.98438rem;
+  font-size: 0.875rem;
   line-height: 1.2;
   padding: 0 0.5em 0 0;
   /* LTR */ }
@@ -6463,7 +6516,7 @@ a.text-dark:hover, a.text-dark:focus {
   padding: 0 0 0 0.5em; }
 
 .comment__permalink {
-  font-size: 0.98438rem;
+  font-size: 0.875rem;
   line-height: 1.2; }
 
 .comment__content:before {
@@ -6507,7 +6560,7 @@ a.text-dark:hover, a.text-dark:focus {
 .comment__content h3 {
   margin-top: 0.94em;
   margin-bottom: 0.45em;
-  font-size: 1.40625rem; }
+  font-size: 1.25rem; }
 
 .comment__content nav {
   padding-top: 1px; }
@@ -6526,7 +6579,7 @@ a.text-dark:hover, a.text-dark:focus {
 .comment .links-inline span {
   padding: 0 0.5em 0 0;
   /* LTR */
-  font-size: 1.125rem; }
+  font-size: 1rem; }
 
 [dir="rtl"] .comment .links-inline span {
   padding: 0 0 0 0.5em; }
@@ -6763,11 +6816,11 @@ summary {
 
 .field--name-field-tags .field__label,
 .field--name-field-tags ul.links {
-  font-size: 0.98438rem; }
+  font-size: 0.875rem; }
 
 .node--view-mode-teaser .field--name-field-tags .field__label,
 .node--view-mode-teaser .field--name-field-tags ul.links {
-  font-size: 0.98438rem; }
+  font-size: 0.875rem; }
 
 .field--name-field-tags ul.links {
   padding: 0;
@@ -6797,7 +6850,7 @@ summary {
   padding-left: 1.5rem;
   /* LTR */
   display: inline-block;
-  min-height: 1.125rem;
+  min-height: 1rem;
   background-repeat: no-repeat;
   background-position: left center;
   /* LTR */ }
@@ -6860,9 +6913,9 @@ summary {
   display: inline-block;
   background-image: url(../../images/required.svg);
   background-repeat: no-repeat;
-  background-size: calc(2.4375rem + 2px)/2 calc(2.4375rem + 2px)/2;
-  width: calc(2.4375rem + 2px)/2;
-  height: calc(2.4375rem + 2px)/2;
+  background-size: calc(2.25rem + 2px)/2 calc(2.25rem + 2px)/2;
+  width: calc(2.25rem + 2px)/2;
+  height: calc(2.25rem + 2px)/2;
   margin: 0 0.3em; }
 
 /* ------------------ Header ------------------ */
@@ -6931,8 +6984,8 @@ summary {
   overflow: hidden;
   text-indent: -9999px;
   display: block;
-  width: 1.125rem;
-  height: 1.125rem; }
+  width: 1rem;
+  height: 1rem; }
 
 /**
  * @file
@@ -7008,7 +7061,7 @@ summary {
  * Visual styles for Bootstrap Barrio's node component.
  */
 .node__content {
-  font-size: 1.125rem;
+  font-size: 1rem;
   margin-top: 1rem; }
 
 /* View mode teaser styles. */
@@ -7029,12 +7082,12 @@ summary {
 
 .node--view-mode-teaser .node__content {
   clear: none;
-  font-size: 1.125rem;
+  font-size: 1rem;
   line-height: 1.5; }
 
 /* Node metadata styles. */
 .node__meta {
-  font-size: 0.98438rem;
+  font-size: 0.875rem;
   margin-bottom: -5px; }
 
 .node__meta .field--name-field-user-picture img {
@@ -7052,7 +7105,7 @@ summary {
 .node__links {
   text-align: right;
   /* LTR */
-  font-size: 1.125rem; }
+  font-size: 1rem; }
 
 [dir="rtl"] .node__links {
   text-align: left; }
@@ -7186,7 +7239,7 @@ header #search-block-form {
 .sidebar .block {
   margin: 0 0 1rem; }
   .sidebar .block .content {
-    font-size: 1.125rem;
+    font-size: 1rem;
     line-height: 1.5; }
 
 .sidebar h2 {
@@ -7194,7 +7247,7 @@ header #search-block-form {
   border-bottom: 1px solid #dee2e6;
   padding-bottom: 5px;
   text-shadow: 0 1px 0 #fff;
-  font-size: 1.40625rem;
+  font-size: 1.25rem;
   line-height: 1.1; }
 
 .sidebar tbody {
@@ -7240,7 +7293,7 @@ header #search-block-form {
   transform: translateX(-50%);
   z-index: 50;
   background: #495057;
-  font-size: 1.125rem;
+  font-size: 1rem;
   line-height: 1.5;
   padding: 1px 1rem 2px;
   border-radius: 0 0 0.3rem 0.3rem;
@@ -7356,7 +7409,7 @@ nav.tabs {
 .ui-dialog input,
 .ui-dialog select,
 .ui-dialog textarea {
-  font-size: 1.125rem; }
+  font-size: 1rem; }
 
 .ui-dialog .button {
   background-color: #fff;
@@ -7368,7 +7421,7 @@ nav.tabs {
   border-right-color: #d2d2d2;
   color: #3a3a3a;
   cursor: pointer;
-  font-size: 1.125rem;
+  font-size: 1rem;
   font-weight: normal;
   text-align: center;
   padding: 0.250em 1.063em;
@@ -7471,7 +7524,7 @@ nav.tabs {
   border: 1px solid #dee2e6;
   display: flex;
   flex-direction: row;
-  font-size: 0.98438rem; }
+  font-size: 0.875rem; }
 
 [dir="rtl"] .vertical-tabs {
   flex-direction: row-reverse;
@@ -7550,7 +7603,7 @@ nav.tabs {
   color: #1b5a99; }
 
 .views-displays .secondary .form-submit {
-  font-size: 0.98438rem; }
+  font-size: 0.875rem; }
 
 /* Tabs action list styles */
 .views-displays .tabs .action-list {
