POWR-296 clean up extra stylesheets and fix padding on topics

--- a/web/themes/custom/cloudy/scss/barrio.scss
+++ b/web/themes/custom/cloudy/scss/barrio.scss
@@ -40,3 +40,4 @@
 @import "./components/vertical-tabs.component";
 @import "./components/vertical-tabs";
 @import "./components/views";
+@import "./components/groups";
