--- a/web/themes/custom/cloudy/scss/style.scss
+++ b/web/themes/custom/cloudy/scss/style.scss
@@ -65,12 +65,12 @@ a {
 
 .cloudy-homepage h3 {
     font-size: 1.1rem;
-    padding-left: 1.5rem;
+    padding-left: 1.8rem;
 }
 
 .cloudy-homepage p {
     font-size: .85rem;
-    padding-left: 1.5rem;
+    padding-left: 1.8rem;
 }
 
 .fas:before {
@@ -92,10 +92,198 @@ a {
 .community-action .fas:before, 
 .audience .fas:before {
     font-size: 2rem;
-    padding-right: 1.25rem;
+    padding-right: 1rem;
     color: $gray-600;
 }
 
 .audience a, .community-action a {
     color: $link-color;
+}
+
+/**
+ * @file
+ * Subtheme specific CSS.
+ */
+
+ .site-name-slogan a {
+    color:#ffffff;
+ }
+
+td .form-check-input {
+    margin-left: 0rem;
+}
+
+ ol.steps {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+li.step {
+  position: relative;
+  counter-increment: step-counter;
+  margin-bottom: 1rem;
+}
+
+li.step:before {
+  content: counter(step-counter);
+  position: absolute;
+  left: 0;
+  top: 0;
+  font-size: 1.5rem;
+  border: 1px #909090 solid;
+  color: #505050;
+  font-weight: bold;
+  padding: .3rem 1rem;
+  border-radius: 50%;
+}
+
+li.step h3.step-title {
+  position: relative;
+  margin-left: 4rem;
+}
+
+.field--name-field-step-instruction, .field--name-field-step-action-button {
+  margin-left: 4rem;
+}
+
+ol.steps dl, ol.steps ol, ol.steps ul {
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+
+ol.steps ol ol, ol.steps ol ul, ol.steps ul ol, ol.steps ul ul {
+  margin-bottom: 0;
+}
+
+p.time-to-complete:before {
+ font-family: FontAwesome;
+ display: inline-block;
+ padding-right: 0.5rem;
+ vertical-align: middle;
+ content: "\f017";
+}
+
+/* ------------ form buttons  ------------ */
+
+.btn-secondary {
+  background: #046A38;
+  border: none;
+}
+
+.btn-secondary:hover {
+  background: #034E29;
+}
+
+*[class*="btn--"]:before {
+  font-family: FontAwesome;
+  display: inline-block;
+  padding-right: 0.5rem;
+  vertical-align: middle;
+}
+
+.btn--call:before {
+  content: "\f095";
+}
+
+.btn--directions:before {
+  content: "\f041";
+}
+
+.btn--download:before {
+  content: "\f019";
+}
+
+.btn--email:before {
+  content: "\f0e0";
+}
+
+.btn--fax:before {
+  content: "\f1ac";
+}
+
+.btn--fax:not(.disabled):hover {
+  cursor: default;
+}
+
+.btn--form:before {
+  content: "\f022";
+}
+
+.form-actions button.btn {
+  margin-right: .5rem;
+}
+
+/* ------------  /end form buttons    ------------*/
+td .form-check-input {
+    margin-left: 0rem;
+}
+
+a.community-action, a.topic, a.audience{
+  font-size: 1.5rem !important;
+  font-weight: 400 !important;
+}
+
+a.community-action {
+  color: #ffffff;
+}
+
+a.topic {
+  color: #ffffff;
+}
+
+.region-primary-menu {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
+.block-copyright-block {
+  background:url(/themes/custom/stormy/images/city-seal.png) no-repeat bottom right;
+  width: 100%;
+  min-height: 200px;
+}
+
+.view-header {
+  margin-bottom: 1rem;
+}
+
+.form-inline {
+  margin-bottom: 1rem;
+}
+
+.form-inline label {
+  justify-content: left;
+}
+
+.form-inline .form-group {
+  margin-right: 1rem;
+}
+
+.form-inline .form-actions {
+  align-items: bottom !important;
+}
+
+.block-copyright-block p{
+  float: right;
+  text-align: right;
+}
+
+.layout-main-wrapper{
+  margin-top: 1.25rem;
+}
+
+.tab-content {
+  padding-top: 1rem;
+}
+
+ul.pagination {
+  margin-top: 1rem;
+}
+
+div.portland-alert {
+  display: none;
+}
+
+.created, .updated {
+  color: #505050;
 }
