--- a/web/themes/custom/stormy/css/style.css
+++ b/web/themes/custom/stormy/css/style.css
@@ -189,6 +189,10 @@ div.portland-alert {
   display: none;
 }
 
+div.always-show div.portland-alert {
+  display: block;
+}
+
 .created, .updated {
   color: #505050;
 }
