POWR-259 Created Alerts views page with class to always show regardless of whether alerts have been dismissed; updated blocks so that Alerts block isn't displayed on Alerts page; required and enabled menu_markup menu and configured to display Alerts link with alert count.

--- a/web/themes/custom/cloudy/css/cloudy.css
+++ b/web/themes/custom/cloudy/css/cloudy.css
@@ -182,6 +182,10 @@ div.portland-alert {
   display: none;
 }
 
+div.always-show div.portland-alert {
+  display: block;
+}
+
 .created, .updated {
   color: #505050;
 }
