POWR-296 updates to the homepage fonts to pick up modular scale

--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -1363,13 +1363,13 @@ select.form-control:focus::-ms-value {
 .col-form-label-lg {
   padding-top: calc(0.5rem + 1px);
   padding-bottom: calc(0.5rem + 1px);
-  font-size: 1.25rem;
+  font-size: 1.125rem;
   line-height: 1.5; }
 
 .col-form-label-sm {
   padding-top: calc(0.25rem + 1px);
   padding-bottom: calc(0.25rem + 1px);
-  font-size: 0.875rem;
+  font-size: 0.88889rem;
   line-height: 1.5; }
 
 .form-control-plaintext {
@@ -1388,16 +1388,16 @@ select.form-control:focus::-ms-value {
     padding-left: 0; }
 
 .form-control-sm {
-  height: calc(1.8125rem + 2px);
+  height: calc(1.83333rem + 2px);
   padding: 0.25rem 0.5rem;
-  font-size: 0.875rem;
+  font-size: 0.88889rem;
   line-height: 1.5;
   border-radius: 0.2rem; }
 
 .form-control-lg {
-  height: calc(2.875rem + 2px);
+  height: calc(2.6875rem + 2px);
   padding: 0.5rem 1rem;
-  font-size: 1.25rem;
+  font-size: 1.125rem;
   line-height: 1.5;
   border-radius: 0.3rem; }
 
@@ -1465,7 +1465,7 @@ textarea.form-control {
   max-width: 100%;
   padding: 0.25rem 0.5rem;
   margin-top: .1rem;
-  font-size: 0.875rem;
+  font-size: 0.88889rem;
   line-height: 1.5;
   color: #fff;
   background-color: rgba(4, 106, 56, 0.9);
@@ -1547,7 +1547,7 @@ textarea.form-control {
   max-width: 100%;
   padding: 0.25rem 0.5rem;
   margin-top: .1rem;
-  font-size: 0.875rem;
+  font-size: 0.88889rem;
   line-height: 1.5;
   color: #fff;
   background-color: rgba(220, 53, 69, 0.9);
@@ -2075,13 +2075,13 @@ fieldset:disabled a.btn {
 
 .btn-lg, .btn-group-lg > .btn {
   padding: 0.5rem 1rem;
-  font-size: 1.25rem;
+  font-size: 1.125rem;
   line-height: 1.5;
   border-radius: 0.3rem; }
 
 .btn-sm, .btn-group-sm > .btn {
   padding: 0.25rem 0.5rem;
-  font-size: 0.875rem;
+  font-size: 0.88889rem;
   line-height: 1.5;
   border-radius: 0.2rem; }
 
@@ -2281,7 +2281,7 @@ input[type="button"].btn-block {
   display: block;
   padding: 0.5rem 1.5rem;
   margin-bottom: 0;
-  font-size: 0.875rem;
+  font-size: 0.88889rem;
   color: #6c757d;
   white-space: nowrap; }
 
@@ -2482,9 +2482,9 @@ input[type="button"].btn-block {
 .input-group-lg > .input-group-append > .input-group-text,
 .input-group-lg > .input-group-prepend > .btn,
 .input-group-lg > .input-group-append > .btn {
-  height: calc(2.875rem + 2px);
+  height: calc(2.6875rem + 2px);
   padding: 0.5rem 1rem;
-  font-size: 1.25rem;
+  font-size: 1.125rem;
   line-height: 1.5;
   border-radius: 0.3rem; }
 
@@ -2493,9 +2493,9 @@ input[type="button"].btn-block {
 .input-group-sm > .input-group-append > .input-group-text,
 .input-group-sm > .input-group-prepend > .btn,
 .input-group-sm > .input-group-append > .btn {
-  height: calc(1.8125rem + 2px);
+  height: calc(1.83333rem + 2px);
   padding: 0.25rem 0.5rem;
-  font-size: 0.875rem;
+  font-size: 0.88889rem;
   line-height: 1.5;
   border-radius: 0.2rem; }
 
@@ -2634,13 +2634,13 @@ input[type="button"].btn-block {
     opacity: 0; }
 
 .custom-select-sm {
-  height: calc(1.8125rem + 2px);
+  height: calc(1.83333rem + 2px);
   padding-top: 0.375rem;
   padding-bottom: 0.375rem;
   font-size: 75%; }
 
 .custom-select-lg {
-  height: calc(2.875rem + 2px);
+  height: calc(2.6875rem + 2px);
   padding-top: 0.375rem;
   padding-bottom: 0.375rem;
   font-size: 125%; }
@@ -2876,10 +2876,10 @@ input[type="button"].btn-block {
 
 .navbar-brand {
   display: inline-block;
-  padding-top: 0.3125rem;
-  padding-bottom: 0.3125rem;
+  padding-top: 0.40625rem;
+  padding-bottom: 0.40625rem;
   margin-right: 1rem;
-  font-size: 1.25rem;
+  font-size: 1.125rem;
   line-height: inherit;
   white-space: nowrap; }
   .navbar-brand:hover, .navbar-brand:focus {
@@ -2910,7 +2910,7 @@ input[type="button"].btn-block {
 
 .navbar-toggler {
   padding: 0.25rem 0.75rem;
-  font-size: 1.25rem;
+  font-size: 1.125rem;
   line-height: 1;
   background-color: transparent;
   border: 1px solid transparent;
@@ -3384,7 +3384,7 @@ input[type="button"].btn-block {
 
 .pagination-lg .page-link {
   padding: 0.75rem 1.5rem;
-  font-size: 1.25rem;
+  font-size: 1.125rem;
   line-height: 1.5; }
 
 .pagination-lg .page-item:first-child .page-link {
@@ -3397,7 +3397,7 @@ input[type="button"].btn-block {
 
 .pagination-sm .page-link {
   padding: 0.25rem 0.5rem;
-  font-size: 0.875rem;
+  font-size: 0.88889rem;
   line-height: 1.5; }
 
 .pagination-sm .page-item:first-child .page-link {
@@ -3945,7 +3945,7 @@ button.close {
   word-spacing: normal;
   white-space: normal;
   line-break: auto;
-  font-size: 0.875rem;
+  font-size: 0.88889rem;
   word-wrap: break-word;
   opacity: 0; }
   .tooltip.show {
@@ -4030,7 +4030,7 @@ button.close {
   word-spacing: normal;
   white-space: normal;
   line-break: auto;
-  font-size: 0.875rem;
+  font-size: 0.88889rem;
   word-wrap: break-word;
   background-color: #fff;
   background-clip: padding-box;
@@ -6451,7 +6451,7 @@ a.text-dark:hover, a.text-dark:focus {
  * Styles for Bootstrap Barrio's breadcrumbs.
  */
 .breadcrumb {
-  font-size: 0.929em 0.875rem; }
+  font-size: 0.929em 0.88889rem; }
 
 .region-breadcrumb {
   padding: 0 15px 0.25em;
@@ -6469,7 +6469,7 @@ a.text-dark:hover, a.text-dark:focus {
   margin-bottom: 1em; }
 
 .field-node--comment {
-  font-size: 0.875rem; }
+  font-size: 0.88889rem; }
 
 .comment {
   margin-bottom: 1.25em;
@@ -6505,7 +6505,7 @@ a.text-dark:hover, a.text-dark:focus {
 .comment__permalink {
   margin-bottom: 4px;
   color: #68696b;
-  font-size: 0.875rem;
+  font-size: 0.88889rem;
   line-height: 1.2;
   padding: 0 0.5em 0 0;
   /* LTR */ }
@@ -6515,7 +6515,7 @@ a.text-dark:hover, a.text-dark:focus {
   padding: 0 0 0 0.5em; }
 
 .comment__permalink {
-  font-size: 0.875rem;
+  font-size: 0.88889rem;
   line-height: 1.2; }
 
 .comment__content:before {
@@ -6559,7 +6559,7 @@ a.text-dark:hover, a.text-dark:focus {
 .comment__content h3 {
   margin-top: 0.94em;
   margin-bottom: 0.45em;
-  font-size: 1.25rem; }
+  font-size: 1.125rem; }
 
 .comment__content nav {
   padding-top: 1px; }
@@ -6815,11 +6815,11 @@ summary {
 
 .field--name-field-tags .field__label,
 .field--name-field-tags ul.links {
-  font-size: 0.875rem; }
+  font-size: 0.88889rem; }
 
 .node--view-mode-teaser .field--name-field-tags .field__label,
 .node--view-mode-teaser .field--name-field-tags ul.links {
-  font-size: 0.875rem; }
+  font-size: 0.88889rem; }
 
 .field--name-field-tags ul.links {
   padding: 0;
@@ -7086,7 +7086,7 @@ summary {
 
 /* Node metadata styles. */
 .node__meta {
-  font-size: 0.875rem;
+  font-size: 0.88889rem;
   margin-bottom: -5px; }
 
 .node__meta .field--name-field-user-picture img {
@@ -7246,7 +7246,7 @@ header #search-block-form {
   border-bottom: 1px solid #dee2e6;
   padding-bottom: 5px;
   text-shadow: 0 1px 0 #fff;
-  font-size: 1.25rem;
+  font-size: 1.125rem;
   line-height: 1.1; }
 
 .sidebar tbody {
@@ -7523,7 +7523,7 @@ nav.tabs {
   border: 1px solid #dee2e6;
   display: flex;
   flex-direction: row;
-  font-size: 0.875rem; }
+  font-size: 0.88889rem; }
 
 [dir="rtl"] .vertical-tabs {
   flex-direction: row-reverse;
@@ -7602,7 +7602,7 @@ nav.tabs {
   color: #1b5a99; }
 
 .views-displays .secondary .form-submit {
-  font-size: 0.875rem; }
+  font-size: 0.88889rem; }
 
 /* Tabs action list styles */
 .views-displays .tabs .action-list {
@@ -8028,39 +8028,6 @@ a {
 .slick > div {
   margin: 0 15px; }
 
-.navbar .navbar-brand img {
-  max-height: 50px; }
-
-.cloudy-homepage h3 {
-  font-size: 1.1rem;
-  padding-left: 1.5rem; }
-
-.cloudy-homepage p {
-  font-size: .85rem;
-  padding-left: 1.5rem; }
-
-.fas:before {
-  font-family: FontAwesome;
-  vertical-align: middle; }
-
-.fas:before {
-  font-family: FontAwesome;
-  vertical-align: middle; }
-
-.topic .fas:before {
-  position: absolute;
-  top: 3px;
-  left: 15px; }
-
-.community-action .fas:before,
-.audience .fas:before {
-  font-size: 2rem;
-  padding-right: 1.25rem;
-  color: #6c757d; }
-
-.audience a, .community-action a {
-  color: #1b5a99; }
-
 .view-group-content-banner,
 .view-group-banner {
   padding: .5rem 1rem; }
@@ -8182,15 +8149,42 @@ p.time-to-complete:before {
 td .form-check-input {
   margin-left: 0rem; }
 
+.navbar .navbar-brand img {
+  max-height: 50px; }
+
+.topic h3 {
+  font-size: 1.125rem;
+  padding-left: 1.8rem; }
+
+.topic p {
+  font-size: 0.88889rem;
+  padding-left: 1.8rem; }
+
+.fas:before {
+  font-family: FontAwesome;
+  vertical-align: middle; }
+
+.fas:before {
+  font-family: FontAwesome;
+  vertical-align: middle; }
+
+.topic h3 .fas:before {
+  position: absolute;
+  top: 3px;
+  left: 15px; }
+
+.community-action .fas:before,
+.audience .fas:before {
+  font-size: 2.5rem;
+  padding-right: 1.25rem;
+  color: #6c757d; }
+
+.audience a, .community-action a {
+  font-size: 1.125rem;
+  color: #1b5a99; }
+
 a.community-action, a.topic, a.audience {
-  font-size: 1.5rem !important;
   font-weight: 400 !important; }
-
-a.community-action {
-  color: #ffffff; }
-
-a.topic {
-  color: #ffffff; }
 
 .region-primary-menu {
   margin-left: 1rem;
