--- a/web/themes/custom/cloudy/scss/style.scss
+++ b/web/themes/custom/cloudy/scss/style.scss
@@ -59,47 +59,6 @@ a {
     margin: 0 15px;
 }
 
-.navbar .navbar-brand img {
-    max-height: 50px;
-}
-
-.cloudy-homepage h3 {
-    font-size: 1.1rem;
-    padding-left: 1.5rem;
-}
-
-.cloudy-homepage p {
-    font-size: .85rem;
-    padding-left: 1.5rem;
-}
-
-.fas:before {
-    font-family: FontAwesome;
-    vertical-align: middle;
-}
-
-.fas:before {
-    font-family: FontAwesome;
-    vertical-align: middle;
-}
-
-.topic .fas:before {
-    position: absolute;
-    top: 3px;
-    left: 15px;
-}
-
-.community-action .fas:before, 
-.audience .fas:before {
-    font-size: 2rem;
-    padding-right: 1.25rem;
-    color: $gray-600;
-}
-
-.audience a, .community-action a {
-    color: $link-color;
-}
-
 // Groups
 
 .view-group-content-banner,
@@ -261,17 +220,50 @@ td .form-check-input {
 
 // Homepage customizations
 
+.navbar .navbar-brand img {
+  max-height: 50px;
+}
+
+.topic h3 {
+  font-size: $font-size-lg;
+  padding-left: 1.8rem;
+}
+
+.topic p {
+  font-size: $font-size-sm;
+  padding-left: 1.8rem;
+}
+
+.fas:before {
+  font-family: FontAwesome;
+  vertical-align: middle;
+}
+
+.fas:before {
+  font-family: FontAwesome;
+  vertical-align: middle;
+}
+
+.topic h3 .fas:before {
+  position: absolute;
+  top: 3px;
+  left: 15px;
+}
+
+.community-action .fas:before, 
+.audience .fas:before {
+  font-size: $h1-font-size;
+  padding-right: 1.25rem;
+  color: $gray-600;
+}
+
+.audience a, .community-action a {
+  font-size: $font-size-lg;
+  color: $link-color;
+}
+
 a.community-action, a.topic, a.audience{
-  font-size: 1.5rem !important;
   font-weight: 400 !important;
-}
-
-a.community-action {
-  color: #ffffff;
-}
-
-a.topic {
-  color: #ffffff;
 }
 
 .region-primary-menu {
