--- a/web/themes/custom/cloudy/scss/typography.scss
+++ b/web/themes/custom/cloudy/scss/typography.scss
@@ -176,6 +176,9 @@ html {
 	@include create-heading-type-scale(minor-third);
 }
 
+$font-size-lg:                ($font-size-base * 1.125);
+$font-size-sm:                ($font-size-base / 1.125);
+
 //** Unit-less `line-height` for use in components like buttons.
 $line-height-base:        1.5 !default;
 //** Computed "line-height" (`font-size` * `line-height`) for use with `margin`, `padding`, etc.
