--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -8225,6 +8225,9 @@ ul.pagination {
 
 div.portland-alert {
   display: none; }
+  
+div.always-show div.portland-alert {
+  display: block; }
 
 .created, .updated {
   color: #505050; }
