--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -8226,5 +8226,8 @@ ul.pagination {
 div.portland-alert {
   display: none; }
 
+div.always-show div.portland-alert {
+  display: block; }
+
 .created, .updated {
   color: #505050; }
