POWR-310 updates to taxonomy term pages linked from homepage

--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -138,7 +138,7 @@ hr {
 
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
-  margin-bottom: 0.5rem; }
+  margin-bottom: 1rem; }
 
 p {
   margin-top: 0;
@@ -364,10 +364,10 @@ template {
 
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
-  margin-bottom: 0.5rem;
+  margin-bottom: 1rem;
   font-family: "Merriweather", Georgia, "Times New Roman", Times, serif;
   font-weight: 500;
-  line-height: 1.1;
+  line-height: 1.25;
   color: inherit; }
 
 h1, .h1 {
@@ -395,22 +395,22 @@ h6, .h6 {
 .display-1 {
   font-size: 6rem;
   font-weight: 300;
-  line-height: 1.1; }
+  line-height: 1.25; }
 
 .display-2 {
   font-size: 5.5rem;
   font-weight: 300;
-  line-height: 1.1; }
+  line-height: 1.25; }
 
 .display-3 {
   font-size: 4.5rem;
   font-weight: 300;
-  line-height: 1.1; }
+  line-height: 1.25; }
 
 .display-4 {
   font-size: 3.5rem;
   font-weight: 300;
-  line-height: 1.1; }
+  line-height: 1.25; }
 
 hr {
   margin-top: 1rem;
@@ -7247,7 +7247,7 @@ header #search-block-form {
   padding-bottom: 5px;
   text-shadow: 0 1px 0 #fff;
   font-size: 1.125rem;
-  line-height: 1.1; }
+  line-height: 1.25; }
 
 .sidebar tbody {
   border: none; }
@@ -8152,17 +8152,17 @@ td .form-check-input {
 .navbar .navbar-brand img {
   max-height: 50px; }
 
+.topic {
+  margin-bottom: .5rem; }
+
 .topic h3 {
   font-size: 1.125rem;
-  padding-left: 1.8rem; }
+  padding-left: 1.8rem;
+  margin-bottom: .5rem; }
 
 .topic p {
   font-size: 0.88889rem;
   padding-left: 1.8rem; }
-
-.fas:before {
-  font-family: FontAwesome;
-  vertical-align: middle; }
 
 .fas:before {
   font-family: FontAwesome;
