--- a/web/themes/custom/cloudy/scss/style.scss
+++ b/web/themes/custom/cloudy/scss/style.scss
@@ -224,19 +224,19 @@ td .form-check-input {
   max-height: 50px;
 }
 
+.topic {
+  margin-bottom: .5rem;
+}
+
 .topic h3 {
   font-size: $font-size-lg;
   padding-left: 1.8rem;
+  margin-bottom: .5rem;
 }
 
 .topic p {
   font-size: $font-size-sm;
   padding-left: 1.8rem;
-}
-
-.fas:before {
-  font-family: FontAwesome;
-  vertical-align: middle;
 }
 
 .fas:before {
