--- a/web/themes/custom/cloudy/scss/typography.scss
+++ b/web/themes/custom/cloudy/scss/typography.scss
@@ -187,5 +187,6 @@ $line-height-computed:    floor(($font-size-base * $line-height-base)) !default;
 //** By default, this inherits from the `<body>`.
 $headings-font-family:    $font-family-serif !default;
 $headings-font-weight:    500 !default;
-$headings-line-height:    1.1 !default;
+$headings-line-height:    1.25 !default;
 $headings-color:          inherit !default;
+$headings-margin-bottom:  1rem !default;
