HOTFIX-0731 Switched where date formatting happens and how it is sent to twig

--- a/web/modules/custom/portland/templates/portland-alert.html.twig
+++ b/web/modules/custom/portland/templates/portland-alert.html.twig
@@ -29,6 +29,6 @@
       <a{{ button_attribute.addClass(button_classes).setAttribute('href', link_url) }}>
         {{ link_text }}
       </a>
-      {{ changed }}
+      Updated {{ changed|date('g:i a M j, Y') }}
     </div>
 </div>
