--- a/web/modules/custom/portland/templates/portland-alert.html.twig
+++ b/web/modules/custom/portland/templates/portland-alert.html.twig
@@ -26,9 +26,11 @@
       {{ text }}
     </div>
     <div class="col-auto d-flex flex-column align-self-end align-items-end">
+      {% if link_url %}
       <a{{ button_attribute.addClass(button_classes).setAttribute('href', link_url) }}>
         {{ link_text }}
       </a>
+      {% endif %}
       Updated {{ changed|date('g:i a M j, Y') }}
     </div>
 </div>
