POWR-133 Response Image module and image alignment.

--- a/web/themes/custom/cloudy/scss/components/field.scss
+++ b/web/themes/custom/cloudy/scss/components/field.scss
@@ -57,6 +57,7 @@
 .field--type-image img,
 .field--name-field-user-picture img {
     margin: 0 0 $spacer;
+    width: 100%;
 }
 
 .field--type-image a {
@@ -110,4 +111,11 @@
 .field--label-inline .field__label,
 .field--label-inline .field__item {
     display: inline-block
+}
+
+.image-align-left {
+    float: left;
+}
+.image-align-right {
+    float: right;
 }
