--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -6798,7 +6798,8 @@ summary {
 
 .field--type-image img,
 .field--name-field-user-picture img {
-  margin: 0 0 1rem; }
+  margin: 0 0 1rem;
+  width: 100%; }
 
 .field--type-image a {
   border-bottom: none; }
@@ -6842,6 +6843,12 @@ summary {
 .field--label-inline .field__label,
 .field--label-inline .field__item {
   display: inline-block; }
+
+.image-align-left {
+  float: left; }
+
+.image-align-right {
+  float: right; }
 
 /**
  * @file
